<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="@dimen/activity_details_width"
            android:layout_height="@dimen/activity_details_layout_height"
            android:foreground="@drawable/foreground_gradient"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="48dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_details_tv_title_layout_height"
            android:layout_marginBottom="@dimen/activity_details_layout_margin_bottom"
            android:layout_marginEnd="@dimen/activity_details_layout_tv_title_margin_end"
            android:layout_marginLeft="@dimen/activity_details_layout_tv_title_margin_left"
            android:layout_marginRight="@dimen/activity_details_layout_tv_title_margin_right"
            android:layout_marginStart="@dimen/activity_details_layout_tv_title_margin_start"
            android:layout_marginTop="@dimen/activity_details_layout_tv_title_margin_top"
            android:background="@drawable/button_shape"
            android:hint="@string/movie_title_hint_text"
            android:paddingLeft="@dimen/activity_details_layout_tv_title_padding_left"
            android:paddingRight="@dimen/activity_details_layout_tv_title_padding_right"
            android:paddingTop="@dimen/activity_details_layout_tv_title_padding_top"
            android:textSize="@dimen/activity_details_layout_tv_title_text_size"
            app:layout_constraintBottom_toTopOf="@+id/tv_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.799" />

        <TextView
            android:id="@+id/tv_release_dates"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_details_layout_tv_release_dates_layout_height"
            android:layout_marginBottom="@dimen/activity_details_layout_tv_release_dates_margin_bottom"
            android:layout_marginEnd="@dimen/activity_details_layout_tv_release_dates_margin_end"
            android:layout_marginLeft="@dimen/activity_details_layout_tv_release_dates_margin_left"
            android:layout_marginRight="@dimen/activity_details_layout_tv_release_dates_margin_right"
            android:layout_marginStart="@dimen/activity_details_layout_tv_release_dates_margin_start"
            android:layout_marginTop="@dimen/activity_details_layout_tv_release_dates_margin_top"
            android:background="@drawable/button_shape_border_no_background"
            android:hint="@string/activity_details_layout_tv_release_dates_hint"
            android:paddingLeft="@dimen/activity_details_layout_tv_release_dates_padding_left"
            android:paddingTop="@dimen/activity_details_layout_tv_release_dates_padding_top"
            app:layout_constraintBottom_toTopOf="@+id/tv_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="@dimen/activity_details_layout_tv_popularity_layout_width"
            android:layout_height="@dimen/activity_details_layout_tv_popularity_layout_height"
            android:layout_marginBottom="@dimen/activity_details_layout_tv_popularity_margin_bottom"
            android:layout_marginEnd="@dimen/activity_details_layout_tv_popularity_margin_end"
            android:layout_marginLeft="@dimen/activity_details_layout_tv_popularity_margin_left"
            android:layout_marginRight="@dimen/activity_details_layout_tv_popularity_margin_right"
            android:layout_marginStart="@dimen/activity_details_layout_tv_popularity_margin_start"
            android:layout_marginTop="@dimen/activity_details_layout_tv_popularity_margin_top"
            android:background="@drawable/button_shape"
            android:hint="@string/activity_details_layout_tv_popularity_hint_text"
            android:paddingLeft="@dimen/activity_details_layout_tv_popularity_padding_left"
            android:paddingTop="@dimen/activity_details_layout_tv_popularity_padding_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.973"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.014"
            />

        <TextView
            android:id="@+id/tv_original_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_details_layout_tv_original_language_margin_bottom"
            android:layout_marginEnd="@dimen/activity_details_layout_tv_original_language_margin_end"
            android:layout_marginLeft="@dimen/activity_details_layout_tv_original_language_margin_left"
            android:layout_marginRight="@dimen/activity_details_layout_tv_original_language_margin_right"
            android:layout_marginStart="@dimen/activity_details_layout_tv_original_language_margin_start"
            android:layout_marginTop="@dimen/activity_details_layout_tv_original_language_margin_top"
            android:background="@drawable/button_shape"
            android:paddingLeft="@dimen/activity_details_layout_tv_original_language_padding_left"
            android:paddingRight="@dimen/activity_details_layout_tv_original_language_padding_right"
            app:layout_constraintBottom_toTopOf="@+id/tv_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toEndOf="@+id/tv_genre_ids"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_dates"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_genre_ids"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_details_layout_tv_genre_ids_layout_height"
            android:layout_marginBottom="@dimen/activity_details_layout_tv_genre_ids_margin_bottom"
            android:layout_marginLeft="@dimen/activity_details_layout_tv_genre_ids_margin_left"
            android:layout_marginStart="@dimen/activity_details_layout_tv_genre_ids_margin_start"
            android:layout_marginTop="@dimen/activity_details_layout_tv_genre_ids_margin_top"
            android:background="@drawable/button_shape_border_no_background"
            android:hint="@string/activity_details_layout_tv_genre_ids_hint_text"
            android:paddingLeft="@dimen/activity_details_layout_tv_genre_ids_padding_left"
            app:layout_constraintBottom_toTopOf="@+id/tv_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_dates"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_details_layout_tv_overview_margin_bottom"
            android:layout_marginEnd="@dimen/activity_details_layout_tv_overview_margin_end"
            android:layout_marginLeft="@dimen/activity_details_layout_tv_overview_margin_left"
            android:layout_marginRight="@dimen/activity_details_layout_tv_overview_margin_right"
            android:layout_marginStart="@dimen/activity_details_layout_tv_overview_margin_start"
            android:hint="@string/activity_details_layout_tv_overview_hint_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/activity_details_layout_image_view_layout_width"
            android:layout_height="@dimen/activity_details_layout_image_view_layout_height"
            android:layout_marginLeft="@dimen/activity_details_layout_image_view_margin_left"
            android:layout_marginStart="@dimen/activity_details_layout_image_view_margin_start"
            android:layout_marginTop="@dimen/activity_details_layout_image_view_margin_top"
            app:layout_constraintBottom_toBottomOf="@+id/tv_popularity"
            app:layout_constraintStart_toStartOf="@+id/tv_popularity"
            app:layout_constraintTop_toTopOf="@+id/tv_popularity"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_star_black_24dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_details_layout_rv_trailer_layout_height"
            android:layout_marginEnd="@dimen/activity_details_layout_rv_trailer_margin_end"
            android:layout_marginLeft="@dimen/activity_details_layout_rv_trailer_margin_left"
            android:layout_marginRight="@dimen/activity_details_layout_rv_trailer_margin_right"
            android:layout_marginStart="@dimen/activity_details_layout_rv_trailer_margin_start"
            android:layout_marginTop="@dimen/activity_details_layout_rv_trailer_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>